cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operand.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ibm-flink-operand
  namespace: "flinkNamespace"
  labels:
    component: cpfs3
spec:
  podSelector: 
    matchLabels:
      type: flink-standalone-kubernetes
  egress:
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 6443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 8081
      - protocol: TCP
        port: 9081
      to:
        - podSelector: {}
  policyTypes:
    - Egress
